fix(styles): Wrap everything in container-fluid

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
 #App {
-  min-height: 100vh;
   font-size: calc(10px + 2vmin);
 }
